[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/MainLevel/Main.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Characters/Base/Base.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/MainLevel/Background/BackgroundCanvasLayer.tscn" type="PackedScene" id=4]
[ext_resource path="res://SelectiveGlowWorldEnvironment.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Camera/Camera2D.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/MainLevel/HUD/Hud.tscn" type="PackedScene" id=7]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="SelectiveGlowWorldEnvironment" parent="." instance=ExtResource( 5 )]

[node name="ShootAnimTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.5
one_shot = true

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Camera2D" parent="." instance=ExtResource( 6 )]

[node name="HUDCanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="HUD" parent="HUDCanvasLayer" instance=ExtResource( 7 )]

[node name="BackgroundCanvasLayer" parent="." instance=ExtResource( 4 )]

[node name="YSort" type="YSort" parent="."]
position = Vector2( 0.164917, -0.670067 )

[node name="Base" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( 250, 92 )
[connection signal="timeout" from="ShootAnimTimer" to="." method="_on_ShootAnimTimer_timeout"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="item_launched" from="HUDCanvasLayer/HUD" to="." method="_on_HUD_item_launched"]
[connection signal="upgrade_launched" from="HUDCanvasLayer/HUD" to="." method="_on_HUD_upgrade_launched"]
[connection signal="base_died" from="YSort/Base" to="HUDCanvasLayer/HUD" method="_on_Base_base_died"]
[connection signal="base_died" from="YSort/Base" to="." method="_on_Base_base_died"]
[connection signal="upgrade_base_deselected" from="YSort/Base" to="HUDCanvasLayer/HUD" method="_on_Base_upgrade_base_deselected"]
[connection signal="upgrade_base_selected" from="YSort/Base" to="HUDCanvasLayer/HUD" method="_on_Base_upgrade_base_selected"]

[editable path="BackgroundCanvasLayer"]
